[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/level_disco/Level/NPC/SpeechNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/level_disco/Level/NPC/Bartender.gd" type="Script" id=2]
[ext_resource path="res://assets/level_disco/art/Bartender.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "beer"
length = 2.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 1.9, 2.1, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42, 66 )

[node name="Bartender" type="Area2D"]
collision_layer = 32
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/beer = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 12
frame = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -70, -2 )
shape = SubResource( 2 )

[node name="SpeechNode" parent="." instance=ExtResource( 1 )]

[connection signal="body_entered" from="." to="." method="_on_Bartender_body_entered"]

[editable path="SpeechNode"]
